--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect rx='20' width='100' height='100' fill='%232563eb'/><text x='50' y='72' text-anchor='middle' font-size='55' fill='white'>⚡</text></svg>">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect rx='20' width='100' height='100' fill='%232563eb'/><text x='50' y='72' text-anchor='middle' font-size='55' fill='white'>⚡</text></svg>">
+    <link rel="icon" type="image/png" href="Basislogo_farbig.png">
+    <link rel="apple-touch-icon" href="Basislogo_farbig.png">
 </head>
 <body>
     <div id="app" class="app-shell">
@@ -41,9 +41,7 @@
         <aside class="sidebar desktop-only" id="sidebar">
             <div class="sidebar-header">
                 <div class="app-logo" id="appLogo">
-                    <div class="logo-icon">
-                        <i class="fa-solid fa-bolt"></i>
-                    </div>
+                    <img src="Basislogo_farbig.png" alt="Klinikum St. Georg Leipzig" class="logo-image">
                     <div class="logo-text">
                         <span class="logo-main">SOP Notaufnahme</span>
                         <span class="logo-sub">Klinikum St. Georg</span>
