--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="Patientenpfade ZNA">
+    <meta name="apple-mobile-web-app-title" content="Patientenpfade: ZNA">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#ffffff" id="metaThemeColor">
-    <meta name="description" content="Patientenpfade ZNA – AG Patientenpflege">
+    <meta name="description" content="Patientenpfade: ZNA – AG Klinische Pfade">
     <meta name="format-detection" content="telephone=no">
-    <title>Patientenpfade ZNA</title>
+    <title>Patientenpfade: ZNA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
@@ -29,7 +29,7 @@
                     </button>
                 </div>
                 <div class="mobile-header-center">
-                    <span class="mobile-title" id="mobileTitle">Patientenpfade ZNA</span>
+                    <span class="mobile-title" id="mobileTitle">Patientenpfade: ZNA</span>
                 </div>
                 <div class="mobile-header-right">
                     <button class="header-btn" id="themeToggleMobile" aria-label="Theme wechseln">
@@ -43,8 +43,8 @@
                 <div class="app-logo" id="appLogo">
                     <img src="Basislogo_farbig.png" alt="Klinikum St. Georg Leipzig" class="logo-image">
                     <div class="logo-text">
-                        <span class="logo-main">Patientenpfade ZNA</span>
-                        <span class="logo-sub">AG Patientenpflege</span>
+                        <span class="logo-main">Patientenpfade: ZNA</span>
+                        <span class="logo-sub">AG Klinische Pfade</span>
                     </div>
                 </div>
             </div>
