--- a/index.html
+++ b/index.html
@@ -144,10 +144,81 @@
             </button>
         </nav>
     </div>
-    <script src="sop-data-1.js"></script>
-    <script src="sop-data-2.js"></script>
-    <script src="sop-data-3.js"></script>
-    <script src="sop-data-4.js"></script>
+    <!-- SOP-Dateien -->
+    <script src="sops/abdominelle-schmerzen.js"></script>
+    <script src="sops/aecopd.js"></script>
+    <script src="sops/akute-alkoholintoxikation.js"></script>
+    <script src="sops/akute-divertikulitis.js"></script>
+    <script src="sops/akute-gastroenteritis.js"></script>
+    <script src="sops/akute-herzinsuffizienz.js"></script>
+    <script src="sops/akute-intoxikation.js"></script>
+    <script src="sops/akute-mesenterialischaemie.js"></script>
+    <script src="sops/akute-nebenniereninsuffizienz.js"></script>
+    <script src="sops/akute-nierenschaedigung.js"></script>
+    <script src="sops/akute-pankreatitis.js"></script>
+    <script src="sops/akuter-gichtanfall.js"></script>
+    <script src="sops/akuter-harnverhalt.js"></script>
+    <script src="sops/akutes-aortensyndrom.js"></script>
+    <script src="sops/anaemie.js"></script>
+    <script src="sops/anaphylaxie.js"></script>
+    <script src="sops/asthmaexazerbation.js"></script>
+    <script src="sops/bakterielle-meningitis.js"></script>
+    <script src="sops/bradykarde-hrst.js"></script>
+    <script src="sops/cannabinoid-hyperemesis-syndrom.js"></script>
+    <script src="sops/delir.js"></script>
+    <script src="sops/diabetische-ketoazidose.js"></script>
+    <script src="sops/dyspnoe.js"></script>
+    <script src="sops/erbrechen.js"></script>
+    <script src="sops/erysipel.js"></script>
+    <script src="sops/fieber-in-der-neutropenie.js"></script>
+    <script src="sops/fremdkoerperingestion.js"></script>
+    <script src="sops/harnwegsinfektion.js"></script>
+    <script src="sops/heparininduzierte-thrombozytopenie.js"></script>
+    <script src="sops/hepatische-enzephalopathie.js"></script>
+    <script src="sops/herz-kreislauf-stillstand.js"></script>
+    <script src="sops/hitzschlag.js"></script>
+    <script src="sops/hyperkaliaemie.js"></script>
+    <script src="sops/hyperkalzaemie.js"></script>
+    <script src="sops/hypernatriaemie.js"></script>
+    <script src="sops/hyperosmolares-hyperglykaemisches-syndrom.js"></script>
+    <script src="sops/hypertensiver-notfall.js"></script>
+    <script src="sops/hypoglykaemie.js"></script>
+    <script src="sops/hypokaliaemie.js"></script>
+    <script src="sops/hypokalzaemie.js"></script>
+    <script src="sops/hyponatriaemie.js"></script>
+    <script src="sops/ikterus.js"></script>
+    <script src="sops/kohlenmonoxidintoxikation.js"></script>
+    <script src="sops/kopfschmerzen.js"></script>
+    <script src="sops/lungenarterienembolie.js"></script>
+    <script src="sops/myxoedemkoma.js"></script>
+    <script src="sops/nicht-st-hebungsinfarkt.js"></script>
+    <script src="sops/nierenkolik.js"></script>
+    <script src="sops/obere-gastrointestinale-blutung.js"></script>
+    <script src="sops/oesophageale-bolusimpaktion.js"></script>
+    <script src="sops/pleuraerguss.js"></script>
+    <script src="sops/pneumonie.js"></script>
+    <script src="sops/schock.js"></script>
+    <script src="sops/sepsis.js"></script>
+    <script src="sops/spontan-bakterielle-peritonitis.js"></script>
+    <script src="sops/st-hebungsinfarkt.js"></script>
+    <script src="sops/status-epilepticus.js"></script>
+    <script src="sops/sterbephase-palliativ.js"></script>
+    <script src="sops/stromunfall.js"></script>
+    <script src="sops/synkope.js"></script>
+    <script src="sops/tachykarde-hrst.js"></script>
+    <script src="sops/thoraxschmerzen.js"></script>
+    <script src="sops/thrombozytopenie.js"></script>
+    <script src="sops/tiefe-venenthrombose.js"></script>
+    <script src="sops/tonsillitis.js"></script>
+    <script src="sops/transiente-globale-amnesie.js"></script>
+    <script src="sops/tumorlysesyndrom.js"></script>
+    <script src="sops/unklare-vigilanzminderung.js"></script>
+    <script src="sops/untere-gastrointestinale-blutung.js"></script>
+    <script src="sops/vena-cava-superior-syndrom.js"></script>
+    <script src="sops/vorhofflimmern.js"></script>
+    <script src="sops/zerebrale-metastasen.js"></script>
+    <script src="sops/zerebrale-venen-sinusthrombose.js"></script>
+    <!-- App -->
     <script src="app.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
