--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="Basislogo_farbig.png">
-    <link rel="apple-touch-icon" href="Basislogo_farbig.png">
+    <link rel="icon" type="image/png" href="img/Patientenpfade.png">
+    <link rel="apple-touch-icon" href="img/Patientenpfade.png">
 </head>
 <body>
     <div id="app" class="app-shell">
@@ -41,10 +41,11 @@
         <aside class="sidebar desktop-only" id="sidebar">
             <div class="sidebar-header">
                 <div class="app-logo" id="appLogo">
-                    <img src="Basislogo_farbig.png" alt="Klinikum St. Georg Leipzig" class="logo-image">
+                    <img src="img/Patientenpfade.png" alt="Patientenpfade" class="logo-image">
                     <div class="logo-text">
                         <span class="logo-main">Patientenpfade: ZNA</span>
-                        <span class="logo-sub">AG Klinische Pfade</span>
+                        <span class="logo-sub">SOPs für die Zentrale Notaufnahme</span>
+                        <span class="logo-sub-2">AG Klinische Pfade</span>
                     </div>
                 </div>
             </div>
