--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <img src="img/Patientenpfade.png" alt="Patientenpfade" class="logo-image">
                     <div class="logo-text">
                         <span class="logo-main">Patientenpfade: ZNA</span>
-                        <span class="logo-sub">SOPs für die Zentrale Notaufnahme</span>
+                        <span class="logo-sub">Standardarbeitsanweisungen für die Notaufnahme</span>
                         <span class="logo-sub-2">AG Klinische Pfade</span>
                     </div>
                 </div>
