--- a/index.html
+++ b/index.html
@@ -113,24 +113,24 @@
 
                 <div class="v v-sop" id="viewSOP"></div>
             </div>
+
+            <nav class="btm-nav" id="bottomNav">
+                <button class="btm-btn" data-tab="home">
+                    <i class="fa-solid fa-house"></i><span>Start</span>
+                </button>
+                <button class="btm-btn" data-tab="browse">
+                    <i class="fa-solid fa-book-medical"></i><span>SOPs</span>
+                </button>
+                <button class="btm-btn" data-tab="search">
+                    <i class="fa-solid fa-magnifying-glass"></i><span>Suche</span>
+                </button>
+            </nav>
         </main>
     </div>
 
     <button class="fab" id="fabAction">
         <i class="fa-solid fa-list-ul"></i>
     </button>
-
-    <nav class="btm-nav" id="bottomNav">
-        <button class="btm-btn active" data-tab="home">
-            <i class="fa-solid fa-house"></i><span>Start</span>
-        </button>
-        <button class="btm-btn" data-tab="browse">
-            <i class="fa-solid fa-book-medical"></i><span>SOPs</span>
-        </button>
-        <button class="btm-btn" data-tab="search">
-            <i class="fa-solid fa-magnifying-glass"></i><span>Suche</span>
-        </button>
-    </nav>
 
     <div class="picker-overlay" id="sectionPickerOverlay">
         <div class="picker-bg" id="sectionPickerBackdrop"></div>
