--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Patientenpfade ZNA">
     <title>Patientenpfade: ZNA</title>
     <link rel="icon" type="image/png" href="img/Basislogo_farbig.png">
-    <link rel="apple-touch-icon" href="img/Basislogo_farbig.png">
+    <link rel="apple-touch-icon" href="img/Patientenpfade.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap">
