--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de" data-theme="light">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no, shrink-to-fit=no">
     <meta name="theme-color" id="metaThemeColor" content="#f5f5f5">
     <meta name="theme-color" content="#1a1a2e" media="(prefers-color-scheme: dark)">
     <meta name="theme-color" content="#f5f5f5" media="(prefers-color-scheme: light)">
@@ -12,7 +12,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="SOP-ZNA">
     <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="email=no">
+    <meta name="format-detection" content="address=no">
     <meta name="description" content="Patientenpfade ZNA">
+    <!-- iOS Touch-Optimierung -->
+    <meta name="HandheldFriendly" content="true">
+    <meta name="MobileOptimized" content="width">
     <title>Patientenpfade: ZNA</title>
     <link rel="icon" type="image/png" href="img/Basislogo_farbig.png">
     <link rel="apple-touch-icon" href="img/Patientenpfade.png">
@@ -28,6 +33,10 @@
             <div class="sidebar-top">
                 <a class="sidebar-brand" id="appLogo" href="#">
                     <img src="img/Patientenpfade.png" alt="Patientenpfade">
+                    <div class="header-title">
+                        <span class="header-main">Patientenpfade</span>
+                        <span class="header-sub">Zentrale Notaufnahme</span>
+                    </div>
                 </a>
                 <div class="sidebar-search">
                     <i class="fa-solid fa-magnifying-glass"></i>
