--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <main class="main" id="mainContent">
             <header class="topbar" id="mobileHeader">
                 <button class="topbar-back" id="backBtn"><i class="fa-solid fa-chevron-left"></i></button>
-                <span class="topbar-title" id="mobileTitle">Patientenpfade: ZNA</span>
+                <span class="topbar-title" id="mobileTitle">Patientenpfade</span>
                 <div class="topbar-actions">
                     <button id="spotlightBtn" class="topbar-btn" aria-label="Suche">
                         <i class="fa-solid fa-magnifying-glass"></i>
