--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -140,16 +142,22 @@
                 </div>
             </div>
 
-            <nav class="btm-nav" id="bottomNav">
-                <button class="btm-btn" data-tab="home">
-                    <i class="fa-solid fa-house"></i><span>Start</span>
-                </button>
-                <button class="btm-btn" data-tab="browse">
-                    <i class="fa-solid fa-book-medical"></i><span>SOPs</span>
-                </button>
-                <button class="btm-btn" data-tab="search">
-                    <i class="fa-solid fa-magnifying-glass"></i><span>Suche</span>
-                </button>
+            <!-- Modern Bottom Navigation with Bootstrap 5 -->
+            <nav class="btm-nav fixed-bottom" id="bottomNav">
+                <div class="btm-nav-inner">
+                    <button class="btm-btn" data-tab="home">
+                        <i class="fa-solid fa-house"></i>
+                        <span class="btm-btn-label">Start</span>
+                    </button>
+                    <button class="btm-btn" data-tab="browse">
+                        <i class="fa-solid fa-book-medical"></i>
+                        <span class="btm-btn-label">SOPs</span>
+                    </button>
+                    <button class="btm-btn" data-tab="search">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <span class="btm-btn-label">Suche</span>
+                    </button>
+                </div>
             </nav>
         </main>
     </div>
@@ -289,6 +297,8 @@
     <script src="sops/zerebrale-metastasen.js"></script>
     <script src="sops/zerebrale-venen-sinusthrombose.js"></script>
     <script src="app.js"></script>
+    <!-- Bootstrap 5 JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Service Worker deaktivieren und Caches löschen
         if ('serviceWorker' in navigator) {
